fixed contact section alignment

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ header {
 }
 
 header p {
-    padding-top: 10px;
+    padding-top: 12px;
     font-size: 12px;
     letter-spacing: 2px;
     float: left;
@@ -82,7 +82,7 @@ header p {
 
 header nav {
     float: right;
-    padding-top: 10px;
+    padding-top: 12px;
 }
 
 header nav li{
@@ -467,40 +467,27 @@ section.contact {
 
 .form-left {
     float: left;
-    width: 618px;
-    padding-top: 45px;
+    width: 50%;
+    min-width: 300px;
 }
 
-.form-left input {
+.form-left input, .form-left textarea {
     border-radius: 0;
     width: 100%;
-    height: 66px;
-    margin-top: 26px;
+    height: 62px;
+    margin-top: 30px;
     font-size: 24px;
 }
 
-.form-left input:first-of-type {
-    margin-top: 0px;
-}
-
-textarea {
-    margin-top: 30px;
-    text-rendering: auto;
-    color: initial;
-    letter-spacing: normal;
-    word-spacing: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: start;
+.form-left textarea {
     font-size: 26px;
+    height: 186px;
 }
 
 .form-right {
     float: left;
-    padding-left: 57px;
-    width: 400px;
+    padding-left: 50px;
+    width: 40%;
 }
 
 .red-chair {
@@ -513,7 +500,7 @@ textarea {
 
 .agreement {
     width: 100%;
-    margin-top: 30px;
+    margin-top: 24px;
 }
 
 .agreement .checkbox {
